# robotics_final

./: README.md
duckiebot_ws/install/: local_setup.sh  setup.sh
duckiebot_ws/install/duckie_interfaces/include/duckie_interfaces/duckie_interfaces/srv/: led_control.h
duckiebot_ws/install/duckie_interfaces/include/duckie_interfaces/duckie_interfaces/srv/detail/: led_control__builder.hpp  led_control__functions.h  led_control__rosidl_typesupport_fastrtps_c.h  led_control__type_support.cpp  led_control__type_support.h
duckiebot_ws/install/duckie_interfaces/local/lib/python3.10/dist-packages/duckie_interfaces/: _duckie_interfaces_s.ep.rosidl_typesupport_fastrtps_c.c  _duckie_interfaces_s.ep.rosidl_typesupport_introspection_c.c
duckiebot_ws/install/duckie_interfaces/local/lib/python3.10/dist-packages/duckie_interfaces/srv/: __init__.py  _led_control.py  _led_control_s.c
duckiebot_ws/install/duckie_interfaces/share/duckie_interfaces/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
duckiebot_ws/install/duckie_interfaces/share/duckie_interfaces/cmake/: rosidl_cmake-extras.cmake
duckiebot_ws/install/duckie_interfaces/share/duckie_interfaces/srv/: LedControl.idl
duckiebot_ws/log/: latest_build
duckiebot_ws/src/duckie_interfaces/: CMakeLists.txt
high_level_motor/: cmd_vel_to_wheels.py
led/: duckie_led_service.py
usd_file/: duckiebackup.usd  duckiebot.usd  target_cube.usd
vision/: duckie_cam_view.py
