<?xml version="1.0"?>
<package format="3">
  <name>duckie_interfaces</name>
  <version>0.0.0</version>
  <description>Duckiebot ROS2 interfaces</description>

  <maintainer email="ekgns0411@gmail.com">kdh</maintainer>
  <license>MIT</license>

  <!-- build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- runtime -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- π”‘ μΈν„°νμ΄μ¤ ν¨ν‚¤μ§€ μ„ μ–Έ (Humble κ²€μ¦ ν†µκ³Ό ν•μ‹) -->
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
